[package]
name = "rust_ble_peripheral"
version = "0.1.0"
edition = "2024"
description = "BLE Peripheral implementation for embedded Linux systems"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
bluer = "0.17"
tokio = { version = "1.0", features = ["full"] }
uuid = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
